--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'monseratt', sans-serif;
+  font-family:'Segoe UI', sans-serif;
 }
 
 .app {
@@ -63,7 +63,7 @@ main {
   font-size: 32px;
   font-weight: 500;
   text-align: center;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  
 }
 
 .location-box .date {
@@ -72,30 +72,23 @@ main {
   font-weight: 300;
   font-style: italic;
   text-align: center;
-  text-shadow: 2px 2px rgba(50, 50, 70, 0.5)
+ 
 }
 
 .weather-box .temp {
-  position: relative;
-  display: inline-block;
-  margin: 30px auto;
-  background-color: rgba(255,255,255,0.2);
-  border-radius: 16px;
-
-  padding: 15px 25px;
   
+  margin: 10px;
   color: #FFF;
-  font-size: 102px;
-  font-weight: 900;
-
-  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  font-size: 150px;
+  font-weight: 400;
   text-align: center;
-  box-shadow: 3px 6px rgba(0, 0, 0, 0.2); 
+  
 }
 
 .weather-box .weather {
-  color: #FFF;
+  color: rgb(221, 210, 210);
   font-size: 48px;
-  font-weight: 700;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  font-weight: 500;
+  
+  text-align: center;
 }
